fix footer block alignment in Internet Explorer.. updated css

--- a/css/demo.03-03-2015.css
+++ b/css/demo.03-03-2015.css
@@ -1,12 +1,7 @@
-p {
-  font-family: inherit;
-  font-weight: 400;
-  font-size: 1rem;
-  line-height: 1.5;
-  margin-bottom: 1.25rem;
-  text-rendering: optimizeLegibility; }
-
 /* =============[   For Demo Purposes   ]=============*/
+footer, main {
+  display: block; }
+
 main, footer {
   width: 100%;
   margin-left: auto;
@@ -32,5 +27,30 @@ footer {
 
 .demo-list, .demo-list-sub {
   list-style: none; }
+
+.contact-list {
+  margin: 0 auto 1.0625rem auto;
+  margin-left: -1.375rem;
+  margin-right: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden; }
+
+.contact-list > li {
+  list-style: none;
+  float: left;
+  margin-left: 1.375rem;
+  display: block; }
+
+.contact-list > li > * {
+  display: block; }
+
+p {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;
+  text-rendering: optimizeLegibility; }
 
 /*# sourceMappingURL=demo.03-03-2015.css.map */
